@@ -13,6 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+
 package org.springframework.osgi.config;
 
 import java.io.Serializable;
@@ -57,6 +58,7 @@ public class OsgiServiceNamespaceHandlerTest extends TestCase {
 	private final List services = new ArrayList();
 
 	private ServiceRegistration registration;
+
 
 	protected void setUp() throws Exception {
 
@@ -114,7 +116,7 @@ public class OsgiServiceNamespaceHandlerTest extends TestCase {
 	public void testBiggerService() throws Exception {
 		OsgiServiceFactoryBean exporter = (OsgiServiceFactoryBean) appContext.getBean("&manyOptions");
 
-		assertTrue(Arrays.equals(new Class[] { Serializable.class, Cloneable.class }, getInterfaces(exporter)));
+		assertTrue(Arrays.equals(new Class[] { Serializable.class, CharSequence.class }, getInterfaces(exporter)));
 		Properties prop = new Properties();
 		prop.setProperty("foo", "bar");
 		prop.setProperty("white", "horse");
