@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:osgi="http://www.springframework.org/schema/osgi"
+	xsi:schemaLocation="
+		http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+		http://www.springframework.org/schema/osgi http://www.springframework.org/schema/osgi/spring-osgi.xsd">
+
+	<osgi:service id="packageAdmin" ref="listener"
+		interface="org.springframework.osgi.context.event.OsgiBundleApplicationContextListener" />
+
+	<bean id="listener" class="org.springframework.osgi.iandt.extenderlistener.LoggerListener"/>
+	
+</beans>
