@@ -59,6 +59,7 @@
     <module>proxy.creator.bundle</module>
     <module>extender.fragment.bundle</module>
     <module>jdk.proxy.bundle</module>
+    <module>extender.listener.bundle</module>
     <module>web.bundles</module>
   </modules>
 
